# ROS2_basic

install/: local_setup.sh  setup.sh
install/LED_system/lib/LED_system/: battery_node  pannel
install/LED_system/share/LED_system/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_cpp_pkg/lib/my_cpp_pkg/: cpp_node
install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.sh  package.sh  package.xml
install/my_py_pkg/lib/my_py_pkg/: num_counter  num_publisher  phone  status
install/my_py_pkg/lib/my_py_pkg/install/: local_setup.sh  setup.bash  (+3 more)
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/: local_setup.sh  package.sh  package.xml
install/my_robot_interfaces/share/my_robot_interfaces/: local_setup.sh  package.sh
src/LED_system/: setup.cfg  setup.py
src/LED_system/LED_system/: led_pannel.py
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: my_first_node.cpp  template_cpp_node.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints_client.py  battery.py  hw_status_publisher.py  led_pannel.py  my_first_node.py  number_counter.py  number_publisher.py  robot_news_station.py  smartphone.py  template_python_node.py
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/launch/: catch_turtles.launch.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/turtlesim_catch_them_all/: setup.py
src/turtlesim_catch_them_all/turtlesim_catch_them_all/: targetposition.py  turtle_spwanner.py  turtlesim_controller.py
(+65 files in other folders)
